# ag-ui-dify-adapter

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_zh_CN.md  config.yaml.example  docker-compose.yml  pyproject.toml
ag_ui_dify/: __init__.py  agent.py  dify_client.py  event_translator.py  server.py  types.py
tests/: test_agent.py  test_client.py  test_integration.py  test_translator.py  test_types.py
