[project]
name = "ag-ui-dify-adapter"
version = "0.1.0"
description = "AG-UI protocol adapter for Dify — translates Dify API responses to AG-UI streaming events"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chuanlong"}
]
requires-python = ">=3.9"
dependencies = [
    "ag-ui-protocol>=0.1.5",
    "httpx>=0.27.0",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
server = ["starlette>=0.40.0", "uvicorn>=0.30.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-httpx>=0.30.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ag_ui_dify*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
